--- a/references.bib
+++ b/references.bib
@@ -7,3 +7,33 @@
       primaryClass={math.AP},
       url={https://arxiv.org/abs/1402.0290}, 
 }
+@book{Banyaga1997,
+    author = {Banyaga, Augustin},
+    title = {The Structure of Classical Diffeomorphism Groups},
+    series = {Mathematics and Its Applications},
+    volume = {400},
+    publisher = {Springer},
+    year = {1997},
+    address = {Dordrecht},
+    isbn = {978-0-7923-4475-5},
+    doi = {10.1007/978-94-015-8907-8}
+}
+@book{Tao2011,
+    author = {Tao, Terence},
+    title = {An Introduction to Measure Theory},
+    publisher = {American Mathematical Society},
+    series = {Graduate Studies in Mathematics},
+    volume = {126},
+    year = {2011},
+    isbn = {978-0-8218-6919-2},
+    pages = {3}
+}
+@misc{gianniotis2015ricciflowmanifoldsboundary,
+      title={The Ricci flow on manifolds with boundary}, 
+      author={Panagiotis Gianniotis},
+      year={2015},
+      eprint={1210.0813},
+      archivePrefix={arXiv},
+      primaryClass={math.DG},
+      url={https://arxiv.org/abs/1210.0813}, 
+}
