--- a/NSDIFFBT.tex
+++ b/NSDIFFBT.tex
@@ -85,70 +85,12 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 \begin{document}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 \maketitle
 \begin{abstract}
+    We connect the Banach-Tarski paradox to the critical times of a fluid.
 \end{abstract}
 \section*{Observations}
    If we plug our sink, turn on the faucet to a critical value and watch the fluid evolve away from a single body given by a manifold in the reservoir $M_r$. It evolves through the tap and dribbles into multiple manifolds $M_1 \cdots M_i$ and into the sink where the submanifolds merge $M_s$.
@@ -189,4 +131,3 @@
 \bibliographystyle{plain}  % or another style like alpha, unsrt, etc.
 \bibliography{references.bib}  % the name of the .bib file
 \end{document}
-
