--- a/NSDIFFBT.tex
+++ b/NSDIFFBT.tex
@@ -82,15 +82,11 @@
 \newtheorem{remark}{Remark}
 \title{Notes on Fluid Dynamics}
 \author{[Drew Remmenga]}
-
-
-
 \begin{document}
-
 
 \maketitle
 \begin{abstract}
-    We connect the Banach-Tarski paradox to the critical times of a fluid.
+   We postulate on a connection between blow up times of Navier-Stokes equations and the Banach-Tarski Paradox.
 \end{abstract}
 \section*{Observations}
    If we plug our sink, turn on the faucet to a critical value and watch the fluid evolve away from a single body given by a manifold in the reservoir $M_r$. It evolves through the tap and dribbles into multiple manifolds $M_1 \cdots M_i$ and into the sink where the submanifolds merge $M_s$.
@@ -131,3 +127,4 @@
 \bibliographystyle{plain}  % or another style like alpha, unsrt, etc.
 \bibliography{references.bib}  % the name of the .bib file
 \end{document}
+
