--- a/NSDIFFBT.tex
+++ b/NSDIFFBT.tex
@@ -8,31 +8,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\Z}{\mathbb{Z}}
@@ -40,26 +15,6 @@
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\Cdot}{\boldsymbol{\cdot}}
 \newcommand{\F}{\mathfrak{F}}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -90,7 +45,7 @@
 \end{abstract}
 \section*{Observations}
    If we plug our sink, turn on the faucet to a critical value, and watch the fluid evolve away from a single body given by a manifold in the reservoir $M_r$. It evolves through the tap and dribbles into multiple manifolds $M_1 \cdots M_i$ and into the sink where the submanifolds merge $M_s$.
-   We turn off the sink and the fluid rests in the reservoir and in the sink. $M_r \to M_r + M_1 + \cdots + M_n + M_s \cot M_r + M_s$. As topology this looks like nonsense. We will try to identify a way to talk about this phenomenon.
+   We turn off the sink and the fluid rests in the reservoir and in the sink. $M_r \to M_r + M_1 + \cdots + M_n + M_s \to M_r + M_s$. As topology this looks like nonsense. We will try to identify a way to talk about this phenomenon.
 \section*{Existing Methods}
 \subsection*{Navier-Stokes}
    Navier-Stokes equations blow up in finite time \cite{tao2015finitetimeblowupaveraged} and have lots of restrictions which I will not repeat but can be found here \cite{tao2015finitetimeblowupaveraged}. This blow up is not a bug but a feature, more on that later.
